# routes/adminRoutes.js
@@ -1,12 +1,7 @@
 import express from 'express';
 import authMiddleware from '../middleware/authMiddleware.js';
 import isAdmin from '../middleware/isAdmin.js';
-import {
-  getAllUsers,
-  getUserById,
-  updateUser,
-  deleteUser
-} from '../controllers/adminController.js';
+import { getAllUsers, getUserById, updateUser, deleteUser, getStats } from '../controllers/adminController.js';
 
 const router = express.Router();
 
@@ -17,7 +12,10 @@ router.get('/dashboard', authMiddleware, isAdmin, (req, res) => {
 // CRUD USUARIOS
 router.get('/users', authMiddleware, isAdmin, getAllUsers);
 router.get('/users/:id', authMiddleware, isAdmin, getUserById);
+router.get('/stats', authMiddleware, isAdmin, getStats);
 router.put('/users/:id', authMiddleware, isAdmin, updateUser);
 router.delete('/users/:id', authMiddleware, isAdmin, deleteUser);
+
+
 
 export default router;
